--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.4.1"
+    "@astrojs/react": "^2.2.0",
+    "@astrojs/tailwind": "^3.1.3",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "astro": "^2.5.5",
+    "openai": "^3.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
